# WinDurango

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
d3d11.x/: CMakeLists.txt  Exports.def  d3d11.x.cpp
etwplus/: CMakeLists.txt  etwplus.cpp
idl/: WinDurango.WinRT.Stub.idl  Windows.Xbox.Media.GameTransportControls.idl
kernelx/: CMakeLists.txt  Logan.h
projects/: .clang-format
projects/WinDurango.Common/: .clang-format  CMakeLists.txt  README.md
projects/WinDurango.Common/include/WinDurango.Common/: Common.h  Config.h  Logging.h  WinDurango.h  exports.h
projects/WinDurango.Common/include/WinDurango.Common/Interfaces/Storage/: Directory.h  File.h
projects/WinDurango.Common/src/: Config.cpp  Logging.cpp  WinDurango.cpp
projects/WinDurango.Core/: CMakeLists.txt  README.md
projects/WinDurango.Core/include/WinDurango.Core/: Core.h
projects/WinDurango.D3D11X/: CMakeLists.txt
projects/WinDurango.D3D11X/include/WinDurango.D3D11X/: IGraphicsUnknown.h  IIDExports.h  d3d11.x.h  unknown.g.h
projects/WinDurango.D3D11X/include/WinDurango.D3D11X/xcom/: base.h
projects/WinDurango.D3D11X/src/: IGraphicsUnknown.cpp  IIDExports.cpp
projects/WinDurango.Implementation.Native/: CMakeLists.txt  README.md
projects/WinDurango.Implementation.Native/include/WinDurango.Implementation.Native/: WinDurangoNative.h
projects/WinDurango.Implementation.Native/src/: dllmain.cpp
projects/WinDurango.Implementation.WinRT/: CMakeLists.txt
projects/WinDurango.Implementation.WinRT/include/WinDurango.Implementation.WinRT/: WinDurango.h
projects/WinDurango.Implementation.WinRT/include/WinDurango.Implementation.WinRT/Interfaces/Storage/: Directory.h  File.h
projects/WinDurango.Implementation.WinRT/src/: WinRT.cpp
projects/WinDurango.Implementation.WinRT/src/interfaces/Storage/: Directory.cpp  File.cpp
projects/WinDurango.Kernel/: CMakeLists.txt  README.md
projects/WinDurango.Kernel/include/WinDurango.Kernel/: Kernel.h
projects/WinDurango.Kernel/src/: kernelx.cpp
projects/WinDurango.KernelX/: CMakeLists.txt
projects/WinDurango.KernelX/include/WinDurango.KernelX/: Hooks.h  kernelx.h
projects/WinDurango.KernelX/src/: Hooks.cpp  dllmain.cpp  kernelx.cpp
projects/WinDurango.MMDevAPI/: CMakeLists.txt  Exports.def
projects/WinDurango.MMDevAPI/include/WinDurango.MMDevAPI/: WinDurango.MMDevAPI.h
projects/WinDurango.MMDevAPI/src/: WinDurango.MMDevAPI.cpp
projects/WinDurango.Testing/: App.cpp  Package.appxmanifest  WinDurango.Testing.slnx  WinDurango.Testing.vcxproj  WinDurango.Testing_TemporaryKey.pfx  readme.txt
projects/WinDurango.WinRT/: CMakeLists.txt  README.md
projects/WinDurango.WinRT/include/WinDurango.WinRT/: WinDurangoWinRT.h  stub.h
projects/WinDurango.WinRT/include/WinDurango.WinRT/Storage/: AbstractStorage.h
projects/WinDurango.WinRT/include/WinDurango.WinRT/Windows/Xbox/Media/: GameTransportControls.h  GameTransportControlsButtonPressedEventArgs.h  GameTransportControlsPropertyChangedEventArgs.h
projects/WinDurango.WinRT/src/: WinDurangoWinRT.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Media/: GameTransportControls.cpp  GameTransportControlsButtonPressedEventArgs.cpp  GameTransportControlsPropertyChangedEventArgs.cpp
projects/WinDurango.etwplus/: CMakeLists.txt
projects/WinDurango.etwplus/include/WinDurango.etwplus/: etwplus.h
